# 2526-unibe-advanced-python

./: .gitignore  LICENSE  LICENSE_CONTENT  README.md  pyproject.toml
assignments/: Assignment01.ipynb  Assignment02.ipynb  Assignment03.ipynb  Assignment04.ipynb  Assignment05.ipynb  Assignment06.ipynb  Assignment07.ipynb
data/csv/: basel_2024.csv  jungfraujoch_2024.csv  population_dataset.csv
data/txt/: data.txt
notebooks/: 00_environment_check.ipynb  01_environment_check.ipynb  01_python_basics.ipynb  02_numpy.ipynb  02_python_basics.ipynb  03_numpy_part_A.ipynb  04_numpy_part_B.ipynb  05_pandas_part_A.ipynb  06_Pandas_part_B.ipynb
src/demo/: hello.py
tests/: test_basic.py
